# Silica

./: ARCHITECTURE.md  CMakeLists.txt  README.md
examples/: assign_function.swift
src/: CMakeLists.txt  bytecode.h  error.h  silica.cc  silica.h
src/analyzer/: type.h  type_constraint.h  type_inference.h  union_find.h  var.h
src/cli/: main.cc  silica.cc  silica.h
src/compiler/: compiler.h
src/core/: built_ins.h  bytecode.h  debug.cc  debug.h  string_interner.h
src/frontend/: ast_visitor.h  compiler.h  error.h  expr.h  factory.h  parser.h  stmt.h  token.h  type.h  type_inference.h  union_find.h  var.h
src/lexer/: error.h  scanner.h
src/parser/: ast_pretty_printer.h  expr.h  factory.h  parser.h  stmt.h
src/runtime/: value.h
src/vm/: vm.cc
tests/: CMakeLists.txt  e2e_test.cpp  parser_test.cpp  type_equality_test.cpp  union_find_test.cpp
